fixed: letter spacing

--- a/core/src/typography.less
+++ b/core/src/typography.less
@@ -30,7 +30,7 @@
   font-size: @font-size-display;
   font-weight: @font-weight-light;
   line-height: 48px;
-  letter-spacing: 0.32;
+  letter-spacing: 0.32px;
   &.reversed {
     color: @zesty-white;
   }
@@ -41,7 +41,7 @@
   font-size: 28px;
   font-weight: @font-weight-light;
   line-height: 42px;
-  letter-spacing: 0.32;
+  letter-spacing: 0.32px;
   &.reversed {
     color: @zesty-white;
   }
@@ -52,7 +52,7 @@
   font-size: @font-size-title;
   font-weight: normal;
   line-height: 36px;
-  letter-spacing: 0.16;
+  letter-spacing: 0.16px;
   &.reversed {
     color: @zesty-white;
   }
@@ -82,7 +82,7 @@
   font-size: @font-size-button;
   font-weight: @font-weight-bold;
   line-height: 20px;
-  letter-spacing: 0.12;
+  letter-spacing: 0.12px;
 }
 
 .caption {
@@ -90,5 +90,5 @@
   font-size: @font-size-caption;
   font-weight: @font-weight-normal;
   line-height: 16px;
-  letter-spacing: 0;
+  letter-spacing: 0px;
 }
